Criação do novo usuário e a listagem e correção das colunas.
