# src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router } from "express";
 
 import { categoriesRoutes } from "./categories.routes";
 import { specificationsRoutes } from "./specification.routes";
+import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
 // Adiciona as rotas da aplicação
 router.use("/categories", categoriesRoutes);
 router.use("/specifications", specificationsRoutes);
+router.use("/users", usersRoutes);
 
 export { router };
